fixed fonts and fontstyle and minor style fixes

--- a/src/components/layout/Navigation.css
+++ b/src/components/layout/Navigation.css
@@ -2,10 +2,13 @@
 
 .nav-item {
   position: relative;
-  font-size: 0.75rem;
+  font-size: 12px;
+  font-weight: 500;
+  font-family: var(--font-gilroy);
   letter-spacing: 0.025em;
   transition: all 0.3s ease-in-out;
   padding: 0.5rem 0;
+  color: #848788;
 }
 
 .nav-item::after {
@@ -31,8 +34,9 @@
   position: relative;
   font-size: 0.75rem;
   font-weight: 700;
+  font-family: var(--font-gilroy);
   letter-spacing: 0.025em;
-  color: var(--color-nav-text-active);
+  color: #49484D;
   transition: all 0.3s ease-in-out;
   padding: 0.5rem 0;
 }
