--- a/src/components/sections/CallToActionBanner.css
+++ b/src/components/sections/CallToActionBanner.css
@@ -32,7 +32,7 @@
 
 .cta-title {
   font-size: 36px;
-  font-weight: 500;
+  font-weight: 600;
   color: white;
   line-height: 1.2;
   margin: 0 0 2rem 0;
@@ -122,6 +122,8 @@
     position: relative;
     max-width: 100%;
     margin-bottom: 300px;
+    align-items: center;
+    justify-content: center;
   }
   .cta-image-content {
     position: absolute;
@@ -147,7 +149,11 @@
   .cta-title {
     font-size: 28px;
     margin-bottom: 1.5rem;
-    font-weight: 400;
+    font-weight: 600;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
   }
   
   .cta-title br {
