--- a/src/components/sections/CommercialPropaneSolutions.css
+++ b/src/components/sections/CommercialPropaneSolutions.css
@@ -25,9 +25,11 @@
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  line-height: 1.3;
+  line-height: 100%;
   margin: 0;
   width: 60%;
+  font-family: var(--font-gilroy);
+  font-weight: 600;
 }
 
 .commercial-propane-solutions-right {
@@ -37,9 +39,10 @@
 .commercial-propane-solutions-description {
   font-size: 20px;
   font-weight: 400;
-  color: #64748b;
-  line-height: 1.6;
+  color: #49484D;
+  line-height: 100%;
   margin: 0 0 2rem 0;
+  font-family: var(--font-gilroy);
 }
 
 .commercial-propane-solutions-buttons {
@@ -58,6 +61,8 @@
   text-transform: capitalize;
   background: linear-gradient(90deg, #4067FC 0%, #60B8FF 100%);
   color: #ffffff;
+  font-family: var(--font-gilroy);
+  font-weight: 600;
 }
 
 .commercial-propane-learn-more-button {
@@ -70,6 +75,8 @@
     text-transform: capitalize;
     background: #eef2f6;
     color:#262525;
+    font-family: var(--font-gilroy);
+    font-weight: 600;
 }
 
 .commercial-propane-solutions-button.primary {
@@ -127,10 +134,14 @@
   .commercial-propane-solutions-title {
     font-size: 28px;
     width: 100% !important;
+    font-family: var(--font-gilroy);
+    font-weight: 600;
   }
   
   .commercial-propane-solutions-description {
-    font-size: 15px;
+    font-size: 16px;
+    font-family: var(--font-gilroy);
+    color: #49484D;
   }
   
   .commercial-propane-solutions-buttons {
