--- a/src/components/sections/FAQSection.css
+++ b/src/components/sections/FAQSection.css
@@ -71,16 +71,18 @@
 .faq-title {
   font-size: 36px;
   font-weight: 600;
-  font-family: 'Gilroy-Bold', sans-serif;
-  color: white;
+  font-family: var(--font-gilroy);
+  color:#FFFFFF;
   margin-bottom: 1.5rem;
-  line-height: 1.2;
+  line-height: 100%;
 }
 
 .faq-description {
-  font-size: 18px;
-  color: #e5e7eb;
-  line-height: 1.6;
+  font-size: 24px;
+  color: #FFFFFF;
+  line-height: 100%;
+  font-family: var(--font-gilroy);
+  font-weight: 500;
 }
 
 .faq-right {
@@ -143,10 +145,11 @@
 }
 
 .faq-question-text {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 500;
-  color: #374151;
-  line-height: 1.4;
+  color: #49484D;
+  font-family: var(--font-gilroy);
+  line-height: 100%;
   flex: 1;
   margin-right: 1rem;
 }
@@ -212,7 +215,7 @@
   
   .faq-title {
     font-size: 24px;
-    font-weight: 400;
+    font-weight: 600;
     margin-bottom: 1rem;
     line-height: 1.3;
   }
@@ -222,6 +225,8 @@
     max-width: 90%;
     margin: 0 auto;
     line-height: 1.2;
+    font-weight: 500;
+    font-family: var(--font-gilroy);
   }
   
   .faq-right {
@@ -243,8 +248,11 @@
   }
   
   .faq-question-text {
-    font-size: 15px;
-    line-height: 1.4;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: var(--font-gilroy);
+    line-height: 100%;
+    color: #49484D;
   }
   
   .faq-item.open .faq-answer {
