--- a/src/components/sections/PartnerBenefits.css
+++ b/src/components/sections/PartnerBenefits.css
@@ -21,25 +21,27 @@
 
 .partner-benefits-title {
   font-size: 36px;
-  font-weight: 400;
+  font-weight: 600;
   background: linear-gradient(90deg, #4168FC 0%, #72C0FE 100%);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  line-height: 1.3;
+  line-height: 100%;
+  font-family: var(--font-gilroy);
 }
 
 .partner-benefits-description {
   font-size: 20px;
-  color: #64748b;
-  line-height: 1.3;
-  margin: 0 0 2rem 0;
+  color: #49484D;
+  line-height: 100%;
+  margin: 1rem 0 2rem 0;
+  font-family: var(--font-gilroy);
 }
 
 .benefits-list {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.7rem;
   margin-bottom: 2.5rem;
 }
 
@@ -59,8 +61,9 @@
 
 .benefit-text {
   font-size: 18px;
-  color: #64748b;
-  line-height: 1.5;
+  color: #49484D;
+  line-height: 100%;
+  font-family: var(--font-gilroy);
 }
 
 .partner-benefits-button {
@@ -74,6 +77,7 @@
   cursor: pointer;
   transition: all 0.3s ease;
   text-transform: capitalize;
+  font-family: var(--font-gilroy);
 }
 
 .partner-benefits-button:hover {
@@ -164,14 +168,16 @@
 .stat-number-sell-propane {
   font-size: 16px;
   font-weight: 600;
-  color: #1e293b;
+  color: #49484D;
   line-height: 1.2;
+  font-family: var(--font-gilroy);
 }
 
 .stat-label {
-  font-size: 12px;
-  color: #64748b;
+  font-size: 14px;
+  color: #49484D;
   line-height: 1.2;
+  font-family: var(--font-gilroy);
 }
 
 
@@ -191,24 +197,36 @@
   
   .partner-benefits-title {
     font-size: 24px;
+    font-family: var(--font-gilroy);
+    font-weight: 600;
   }
   
   .partner-benefits-description {
     font-size: 16px;
+    font-family: var(--font-gilroy);
+    color: #49484D;
   }
   
   .benefit-text {
     font-size: 14px;
+    font-family: var(--font-gilroy);
+    color: #49484D;
   }
   .partner-benefits-right {
     flex: 1;
     width: 100%;
   }
   .stat-number-sell-propane {
-    font-size: 16px;
+    font-size: 12px;
     font-weight: 600;
-    color: #1e293b;
+    color: #49484D;
     line-height: 1.2;
+  }
+  .stat-label {
+    font-size: 11px;
+    color: #49484D;
+    line-height: 1.2;
+    font-family: var(--font-gilroy);
   }
   
   .partner-image-container {
