--- a/src/components/sections/PropaneSolutionsSection.css
+++ b/src/components/sections/PropaneSolutionsSection.css
@@ -28,6 +28,8 @@
   line-height: 1.3;
   margin: 0;
   width: 60%;
+  font-family: var(--font-gilroy);
+  font-weight: 600;
 }
 
 .propane-solutions-right {
@@ -37,9 +39,10 @@
 .propane-solutions-description {
   font-size: 20px;
   font-weight: 400;
-  color: #64748b;
+  color: #49484D;
   line-height: 1.6;
   margin: 0 0 2rem 0;
+  font-family: var(--font-gilroy);
 }
 
 .propane-solutions-buttons {
@@ -59,6 +62,7 @@
   text-transform: capitalize;
   background: linear-gradient(90deg, #4067FC 0%, #60B8FF 100%);
   color: #ffffff;
+  font-family: var(--font-gilroy);
 }
 
 .propane-learn-more-button {
@@ -72,6 +76,7 @@
     text-transform: capitalize;
     background: #eef2f6;
     color:#262525;
+    font-family: var(--font-gilroy);
 }
 
 .propane-solutions-button.primary {
@@ -112,7 +117,7 @@
   
   .propane-solutions-content {
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
     text-align: left;
   }
   .propane-solutions-left {
@@ -121,12 +126,14 @@
   }
   
   .propane-solutions-title {
-    font-size: 28px;
+    font-size: 24px;
     width: 100% !important;
   }
   
   .propane-solutions-description {
-    font-size: 15px;
+    font-size: 16px;
+    line-height: 100%;
+    color: #49484D;
   }
   
   .propane-solutions-button , .propane-learn-more-button{
