--- a/src/components/sections/TestimonialsSection.css
+++ b/src/components/sections/TestimonialsSection.css
@@ -22,10 +22,12 @@
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  line-height: 1.3;
   margin: 0;
   max-width: 50%;
   margin: 0 auto;
+  font-family: var(--font-gilroy);
+  font-weight: 600;
+  line-height: 100%;
 }
 
 .testimonials-grid {
@@ -81,10 +83,11 @@
 
 .testimonial-text {
   font-size: 16px;
-  color: #374151;
+  color: #151515;
   line-height: 1.6;
   margin: 0 0 2rem 0;
-  font-style: italic;
+  font-style: var(--font-gilroy);
+  font-weight: 400;
   flex-grow: 1;
 }
 
@@ -112,7 +115,6 @@
   font-size: 16px;
   font-weight: 600;
   color: #111827;
-  margin: 0 0 0.25rem 0;
 }
 
 .author-location {
@@ -132,13 +134,13 @@
   }
   
   .testimonials-header {
-    margin-bottom: 3rem;
-    padding: 0 1rem;
+    margin-bottom: 2rem;
+    padding: 0 0rem;
   }
   
   .testimonials-title {
-    font-size: 26px;
-    max-width: 90%;
+    font-size: 24px;
+    max-width: 100%;
   }
   
   .testimonials-grid {
@@ -170,11 +172,12 @@
   }
   
   .testimonial-text {
-    font-size: 15px;
+    font-size: 16px;
   }
   
   .author-name {
-    font-size: 15px;
+    font-size: 14px;
+    font-weight: 600;
   }
   
   .author-location {
